<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">XPadApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">欢迎进入无纸化会议表决系统 </string>
    <string name="connect_meeting">正在连接会议网络...</string>
    <string name="welcome_use">欢迎使用</string>
    <string name="sunvote_system">无纸化表决系统</string>
    <string name="vote_election">投票选举</string>
    <string name="vote_result">投票结果</string>
    <string name="biaojue_result">表决结果</string>
    <string name="ceping_result">测评结果</string>
    <string name="base_connecting">基站连接中</string>
    <string name="keypad_test">键盘测试</string>
    <string name="sunvote_no_paper">无纸化会议</string>
    <string name="submiting">提交中</string>
    <string name="modify">修改</string>
    <string name="doc_title">会议议案</string>
    <string name="page_up">上翻</string>
    <string name="page_down">下翻</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="confirm_submit">确认提交</string>
    <string name="input_other">请输入另选代表姓名</string>
    <string name="open_wifi">正在开启 WiFi</string>
    <string name="keypad_id">终端编号</string>
    <string name="version">版本</string>
    <string name="agree">赞成</string>
    <string name="oppose">反对</string>
    <string name="abstant">弃权</string>
    <string name="cant_modify_confirm">投票后不可以修改，是否确定提交?</string>
    <string name="should_vote">当前应投</string>
    <string name="demo_metting">演示会议</string>
    <string name="all_abstant">全弃权</string>
    <string name="all_oppose">全反对</string>
    <string name="all_agree">全赞成</string>
    <string name="please_vote">请对当前议案投票</string>
    <string name="please_press_key">请按键表决</string>
    <string name="name_index"> 排名</string>
    <string name="name">姓名</string>
    <string name="demo_meeting_result">演示会议投票结果</string>
    <string name="number">序号</string>
    <string name="memo">说 明</string>
    <string name="result">结果</string>
    <string name="please_signin">请按键签到</string>
    <string name="signin">签到</string>
    <string name="select_other">另选他人</string>
    <string name="vote">投票</string>
    <string name="title">标题</string>
    <string name="zhaiyao">摘要</string>
    <string name="xianren">现任</string>
    <string name="niren">拟任</string>
    <string name="nimian">拟免</string>
    <string name="content">内容</string>
    <string name="pass">通过</string>
    <string name="no_pass">未通过</string>
    <string name="zc_fd">赞成/反对</string>
    <string name="zc_fd_qq">赞成/反对/弃权</string>
    <string name="ty_fd_qq">"同意/反对/弃权"</string>
    <string name="my_jbmy_bmy">满意/基本满意/不满意</string>
    <string name="my_jbmy_bmy_blj">满意/基本满意/不满意/不了解</string>
    <string name="my_jbmy_yb_bmy">满意/基本满意/一般/不满意</string>
    <string name="fcmy_my_blj_bmy_fcbmy">非常满意/满意/不了解/不满意/非常不满意</string>
    <string name="fcty_ty_bqd_bty_fcbty">非常同意/同意/不确定/不同意/非常不同意</string>
    <string name="yx_cz_bcz">优秀/称职/不称职</string>
    <string name="yx_cz_jbcz_bcz">优秀/称职/基本称职/不称职</string>
    <string name="y_l_z_c">优/良/中/差</string>
    <string name="my_bmy_fcbmy">满意/不满意/非常不满意</string>
    <string name="tongyi">同意</string>
    <string name="app_version">App版本:</string>
    <string name="hardware_ver">  硬件型号: </string>
    <string name="firmware_ver">   固件版本:</string>
    <string name="communication_test">通讯测试:</string>
    <string name="please_vote_can_modify">请按键投票（投票后可修改）</string>
    <string name="please_vote_can_not_modify">请按键投票（投票后不可修改）</string>
    <string name="submited">已提交</string>
    <string name="connect_server_fail">连接服务器失败！</string>
    <string name="downloading">正在下载：</string>
    <string name="download_over">下载完成！</string>
    <string name="download_fail">下载文件失败！</string>
    <string name="connect_server_ing">正在连接服务器</string>
    <string name="need_select">需要选择</string>
    <string name="person_can_submit">人才能提交</string>
    <string name="must_input_name">姓名不能为空！</string>
    <string name="houxuan">候选</string>
    <string name="houxuan2">人，需要选出</string>
    <string name="houxuan3">人</string>
    <string name="max_select">最多只能选</string>
    <string name="person">人</string>
    <string name="vote_not_start">投票未开始</string>
    <string name="should_select">应选</string>
    <string name="should_select1">人   已选</string>
    <string name="you_selected">"您选择了 “"</string>
    <string name="you_selected_confirm">” 投票后不可以修改，是否确定提交?</string>
    <string name="no_file_tips">没有找到会议资料文件，请联系管理员下载！</string>
    <string name="no_file_tips_meeting_id">会议ID:</string>
    <string name="signin_result">签到结束</string>
    <string name="yindao">应到 </string>
    <string name="shidao">实到  </string>
    <string name="weidao">未到 </string>
    <string name="maohao">： </string>
    <string name="bufuherenshu">不符合法定人数</string>
    <string name="fuherenshu">符合法定人数</string>
    <string name="weian">未按</string>
    <string name="manyi">满意</string>
    <string name="jbmanyi">基本满意</string>
    <string name="bumanyi">不满意</string>
    <string name="fcbumanyi">非常不满意</string>
    <string name="signining">正在签到...</string>
    <string name="signined">已签到</string>
    <string name="submited_no_modify">已提交，不可修改</string>
    <string name="base_id">基站编号</string>
    <string name="terminal_id">终端ID:</string>
    <string name="admin_setting">管理员设置</string>
    <string name="modifi_idsn">修改ID/SN</string>
    <string name="device_problem">设备故障，请尝试手动重启设备</string>
    <string name="unvote">未按</string>
    <string name="item">项目</string>
    <string name="all">全</string>
	<string name="submit_error">提交失败</string>
	<string name="sent">已发送</string>
	<string name="piao">票</string>
	<string name="ren">人</string>
</resources>