<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/votebakground" >

    <TextView
        android:id="@+id/multivote_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginRight="450dp"
        android:text="@string/sunvote_no_paper"
        android:textSize="30dp" />

     <TextView
            android:id="@+id/multi_title_btn_abstain_all"
            android:layout_width="122dp"
            android:layout_height="62dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="64dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/signin_selector"
            android:gravity="center"
            android:text="@string/all_abstant"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/multi_title_btn_oppose_all"
            android:layout_width="122dp"
            android:layout_height="62dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="32dp"
            android:layout_toLeftOf="@id/multi_title_btn_abstain_all"
            android:background="@drawable/oppos_selector"
            android:gravity="center"
            android:text="@string/all_oppose"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/multi_title_btn_agree_all"
            android:layout_width="122dp"
            android:layout_height="62dp"
			android:layout_toLeftOf="@id/multi_title_btn_oppose_all"
            android:layout_marginRight="18dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/agree_selector"
            android:gravity="center"
            android:text="@string/all_agree"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:textStyle="bold"
            android:visibility="invisible" />
    

    <RelativeLayout
        android:id="@+id/multivote_pannal_bottom"
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:layout_alignParentBottom="true"
        android:alpha="0.9"
        android:background="@drawable/gray_alpha"
        android:visibility="visible" >

        <TextView
            android:id="@+id/multivote_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="36dp"
            android:text="@string/should_vote"
            android:textSize="30dp" />

        <View
            android:id="@+id/multivote_page"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:visibility="invisible"
            android:layout_centerInParent="true"
            />

        <Button
            android:id="@+id/multivote_pageup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/multivote_page"
            android:background="@drawable/page_selector"
            android:textSize="22sp"
            android:text="@string/page_up" />

        <Button
            android:id="@+id/multivote_pagedown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/multivote_page"
            android:background="@drawable/page_selector"
            android:textSize="22sp"
            android:text="@string/page_down" />

        <Button
            android:id="@+id/multivote_btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="36dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/signin_selector"
            android:text="@string/confirm_submit"
            android:textColor="@color/white"
            android:textSize="36dp"
            android:textStyle="bold" />
        
        <Button
            android:id="@+id/multivote_btn_modify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="36dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/signin_selector"
            android:text="@string/modify"
            android:textColor="@color/white"
            android:textSize="36dp"
            android:textStyle="bold"
            android:visibility="invisible"
             />
    </RelativeLayout>
    
    <ListView
        android:id="@+id/multivote_listview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:divider="@color/votebakground"  
		android:dividerHeight="8dp"
        
        android:layout_below="@id/multivote_title"
        android:layout_above="@id/multivote_pannal_bottom"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="2dp"
        android:fastScrollEnabled="false"
        >
    </ListView>
    
    <RelativeLayout 
        android:id="@+id/multivote_confirm_panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:visibility="gone"
        >
        <TextView 
             android:id="@+id/multivote_confirm_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text=""
            android:textSize="36dp"
            android:layout_marginTop="110dp"
            android:layout_centerHorizontal="true"
            />
        
         
        <Button 
            android:id="@+id/multivote_confirm_btn_cancel"
            android:layout_width="311dp"
            android:layout_height="96dp"
            android:layout_below="@id/multivote_confirm_text"
            android:layout_marginLeft="296dp"
            android:layout_marginTop="102dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/btn_signin_d"
            android:text="@string/cancel"
             android:textColor="@color/white"
            android:textSize="36dp"
            android:textStyle="bold"
            />
        
        <Button 
            android:id="@+id/multivote_confirm_btn_ok"
            android:layout_width="311dp"
            android:layout_height="96dp"
            android:layout_below="@id/multivote_confirm_text"
            android:layout_marginRight="296dp"
            android:layout_marginTop="102dp"
             android:layout_alignParentRight="true"
            android:text="@string/ok"
            android:background="@drawable/btn_agree"
            android:textColor="@color/white"
            android:textSize="36dp"
            android:textStyle="bold"
            />
        
        
    </RelativeLayout>

</RelativeLayout>