<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/votebakground"
    >
   
	<TextView
        android:id="@+id/multi_content_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32px"
        android:layout_marginTop="48px"
        android:text="@string/sunvote_no_paper"
        android:textSize="30px" />

    

    <RelativeLayout
        android:id="@+id/multi_content_pannal_bottom"
        android:layout_width="match_parent"
        android:layout_height="120px"
        android:layout_alignParentBottom="true"
        android:alpha="0.9"
        android:background="@drawable/gray_alpha"
        android:visibility="visible" >

        <TextView
            android:id="@+id/multi_content_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="36px"
            android:text="@string/should_vote"
            android:textSize="30px" />

        <View
            android:id="@+id/multi_content_page"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:layout_centerInParent="true"
            android:visibility="invisible"
            android:textSize="30px" />

        <Button
            android:id="@+id/multi_content_pageup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/multi_content_page"
            android:background="@drawable/page_selector"
            android:textSize="22sp"
            android:text="@string/page_up" />

        <Button
            android:id="@+id/multi_content_pagedown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/multi_content_page"
            android:background="@drawable/page_selector"
            android:textSize="22sp"
            android:text="@string/page_down" />

        <Button
            android:id="@+id/multi_content_btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="36px"
            android:layout_alignParentRight="true"
            android:background="@drawable/signin_selector"
            android:text="@string/confirm_submit"
            android:textColor="@color/white"
            android:textSize="36px"
            android:textStyle="bold" />
        
        <Button
            android:id="@+id/multi_content_btn_modify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="36px"
            android:layout_alignParentRight="true"
            android:background="@drawable/signin_selector"
            android:text="@string/modify"
            android:textColor="@color/white"
            android:textSize="36px"
            android:textStyle="bold" 
            android:visibility="invisible"
            />
    </RelativeLayout>
    
    <ListView
        android:id="@+id/multi_content_listview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:divider="@color/votebakground"  
		android:dividerHeight="8px"   
        
        android:layout_below="@id/multi_content_title"
        android:layout_above="@id/multi_content_pannal_bottom"
        android:layout_marginLeft="36px"
        android:layout_marginRight="36px"
        android:layout_marginTop="28px" 
        android:layout_marginBottom="2px"
        android:fastScrollEnabled="false"
        >
    </ListView>
    
     <RelativeLayout 
        android:id="@+id/multi_content_confirm_panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:visibility="gone"
        >
        <TextView 
             android:id="@+id/multi_content_confirm_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text=""
            android:textSize="36px"
            android:layout_marginTop="110px"
            android:layout_centerHorizontal="true"
            />
        
         
        <Button 
            android:id="@+id/multi_content_confirm_btn_cancel"
            android:layout_width="311px"
            android:layout_height="96px"
            android:layout_below="@id/multi_content_confirm_text"
            android:layout_marginLeft="296px"
            android:layout_marginTop="102px"
            android:layout_alignParentLeft="true"
            android:background="@drawable/btn_signin_d"
            android:text="@string/cancel"
             android:textColor="@color/white"
            android:textSize="36px"
            android:textStyle="bold"
            />
        
        <Button 
            android:id="@+id/multi_content_confirm_btn_ok"
            android:layout_width="311px"
            android:layout_height="96px"
            android:layout_below="@id/multi_content_confirm_text"
            android:layout_marginRight="296px"
            android:layout_marginTop="102px"
             android:layout_alignParentRight="true"
            android:text="@string/ok"
            android:background="@drawable/btn_agree"
            android:textColor="@color/white"
            android:textSize="36px"
            android:textStyle="bold"
            />
        
        
    </RelativeLayout>
    
</RelativeLayout>
